--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "postcss-ng-tailwind-in-components",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "description": "PostCSS plugin to instruct angular emulated encapsulation with tailwind @apply function",
   "keywords": [
     "postcss",
     "css",
     "postcss-plugin",
     "angular",
-    "tailwind",
-    "darkmode"
+    "tailwind"
   ],
   "author": "Vlad Tansky <vl.tansky@gmail.com>",
   "license": "MIT",
